change the version to 0.0.1